@@ -1,3 +1,11 @@
+2006-05-03  Fabio Marzocca  <thesaltydog@gmail.com>
+
+	* C/baobab.xml:
+	* C/figures/baobab_fullscan.png:
+	* C/figures/baobab_remote.png:
+
+	Drafting Usage section
+
 2006-04-27  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* C/baobab.xml:
